--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "butterflymusic-freunde-app",
-  "version": "1.1.0",
-  "description": "ButterflyMusic Freunde App Backend Server",
+  "version": "1.0.0",
+  "description": "ButterflyMusic Freunde App Backend + Frontend (Neon Lobby)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.19.2"
+  },
+  "engines": {
+    "node": ">=18 <23"
   }
 }
+-
 
