--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "butterflymusic-freunde-app",
   "version": "1.0.0",
-  "description": "ButterflyMusic Freunde App Backend + Frontend (Neon Lobby)",
+  "description": "ButterflyMusic Freunde App Backend (Chat, Login, Profil, Coins, Level)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -14,5 +14,6 @@
     "node": ">=18 <23"
   }
 }
--
+
+
 
